--- a/package.json
+++ b/package.json
@@ -14,10 +14,17 @@
     "React"
   ],
   "author": "Kay Du",
-  "license": "ISC",
+  "license": "MIT",
+  "private": true,
   "dependencies": {
+    "axios": "^0.16.2",
+    "moment": "^2.18.1",
     "react": "^15.6.1",
-    "react-dom": "^15.6.1"
+    "react-dom": "^15.6.1",
+    "react-redux": "^5.0.5",
+    "react-router": "^4.1.1",
+    "redux": "^3.7.1",
+    "weui": "^1.1.2"
   },
   "devDependencies": {
     "babel-cli": "^6.24.1",
@@ -26,8 +33,12 @@
     "babel-preset-env": "^1.5.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "css-loader": "^0.28.4",
+    "file-loader": "^0.11.2",
+    "style-loader": "^0.18.2",
     "uglify-js": "^3.0.20",
     "uglifyjs-webpack-plugin": "^0.4.6",
+    "url-loader": "^0.5.9",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
     "webpack-merge": "^4.1.0"
