--- a/.babelrc
+++ b/.babelrc
@@ -2,7 +2,11 @@
   "presets": [
     "env",
     "es2015",
+    "stage-2",
     "react"
   ],
-  "plugins": ["transform-object-rest-spread"]
+  "plugins": [
+    "transform-object-rest-spread",
+    "react-hot-loader/babel"
+  ]
 }
